<resources>
    <string name="app_name">P8-Vitesse</string>
    <string name="add_button">add candidat</string>
    <string name="tab_item_1">Tous</string>
    <string name="tab_item_2">Favoris</string>
    <string name="search">Rechercher un candidat</string>
    <string name="no_candidate">Aucun candidat</string>
    <string name="back">Retour</string>
    <string name="favorites">Favoris</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="candidate_img">Photo candidat</string>
    <string name="phone">Appel</string>
    <string name="message">SMS</string>
    <string name="email">E-mail</string>
    <string name="about">A propos</string>
    <string name="birthday">Anniversaire</string>
    <string name="wage">Prétentions salariales</string>
    <string name="note">Note</string>
    <string name="add_title">Ajouter un candidat</string>
    <string name="edit_title">Modifier un candidat</string>
    <string name="firstname">Prénom</string>
    <string name="lastname">Nom</string>
    <string name="selectDate">Sélectionner une date</string>
    <string name="enterDate">Entrer une date</string>
    <string name="money">icon money</string>
    <string name="salary">Prétentions salariales</string>
    <string name="save">Sauvegarder</string>
</resources>