<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_details">

    <item
        android:id="@+id/ic_favorite"
        android:title="@string/favorites"
        android:icon="@drawable/star_outline"
        android:contentDescription="@string/favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ic_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        android:contentDescription="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ic_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        android:contentDescription="@string/delete"
        app:showAsAction="ifRoom" />

</menu>