<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addCandidate"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    app:navigationIcon="@drawable/baseline_arrow_back"
                    app:navigationContentDescription="@string/back"
                    app:title="@string/add_title" />
            </com.google.android.material.appbar.AppBarLayout>

            <!-- Firstname Input -->
            <ImageView
                android:id="@+id/img_add"
                android:layout_width="375dp"
                android:layout_height="195dp"
                android:layout_marginTop="14dp"
                android:contentDescription="@string/candidate_img"
                android:src="@drawable/image_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

            <ImageView
                android:id="@+id/ic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/phone"
                android:src="@drawable/ic_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/first_name_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/firstname"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/phone_input_layout"
                app:layout_constraintTop_toBottomOf="@id/img_add">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="John" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Lastname Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="45dp"
                android:hint="@string/lastname"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/phone_input_layout"
                app:layout_constraintTop_toBottomOf="@id/first_name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Doe" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone Input -->
            <ImageView
                android:id="@+id/phoneIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/phone"
                android:src="@drawable/ic_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/phone_input_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="45dp"
                android:hint="@string/phone"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/phoneIcon"
                app:layout_constraintTop_toBottomOf="@id/last_name_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:text="0123456789" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email Input -->
            <ImageView
                android:id="@+id/mailIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:contentDescription="@string/email"
                android:src="@drawable/ic_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/email_input_layout"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="45dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/phoneIcon"
                app:layout_constraintTop_toBottomOf="@id/phone_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    tools:text="Email" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Birthday Input -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/birthday"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/datePicker"
                app:srcCompat="@drawable/ic_birthday" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/datePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/email_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/selectDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="jj/mm/aaaa"
                        android:layout_marginTop="14dp"
                        android:layout_marginStart="24dp"
                        android:text="@string/selectDate"
                        android:textSize="14sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/enterDate"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="jj/mm/aaaa"
                        android:text="@string/enterDate"
                        android:textSize="32sp"
                        app:layout_constraintTop_toBottomOf="@id/selectDate"
                        app:layout_constraintStart_toStartOf="@id/selectDate" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/enterDate"
                        app:layout_constraintStart_toEndOf="@id/enterDate"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="14dp"
                        android:src="@drawable/ic_calendar"
                        android:contentDescription="@string/birthday" />

                    <View
                        android:id="@+id/separator"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintTop_toBottomOf="@id/enterDate"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_input_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintTop_toBottomOf="@id/separator"
                        app:layout_constraintStart_toStartOf="@id/selectDate"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:clickable="true"
                            android:layout_marginBottom="16dp"
                            android:hint="Date"
                            android:text="jj/mm/aaaa"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Salary Input -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/money"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/salarial_input_layout"
                app:srcCompat="@drawable/ic_money" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/salarial_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/salary"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/phoneIcon"
                app:layout_constraintTop_toBottomOf="@id/datePicker">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="45dp"
                    android:inputType="numberDecimal"
                    tools:text="Prétentions salariales" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Note Input -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/notes_input_layout"
                app:srcCompat="@drawable/ic_note" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/notes_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/note"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/phoneIcon"
                app:layout_constraintTop_toBottomOf="@id/salarial_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    android:layout_marginBottom="112dp"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    tools:text="Lorem ipsum" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <Button
        android:id="@+id/filledButton"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="64dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</FrameLayout>